--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body>
-  <nav class="nav container mx-auto flex align-items-center justify-content-between">
+  <nav class="nav container-90 mx-auto flex align-items-center justify-content-between">
     <div class="logo flex">
       <img
         src="./image/Property 1=Default@2x.png"
@@ -53,7 +53,7 @@
       <h4 class="logo-title">喵立翰 Miao Li-Han</h4>
     </div>
     <div class="interactiveBtns flex">
-      <a href="javascript:;">候選人主張</a>
+      <a href="#advocate">候選人主張</a>
       <a href="javascript:;">最新活動</a>
       <a href="javascript:;">政策議題</a>
       <a href="javascript:;">小額捐款</a>
@@ -75,8 +75,8 @@
     </div>
   </nav>
 
-  <header class="container-s mx-auto">
-    <div class="slogan">台灣的明天 喵先鋪路</div>
+  <header class="container-s mx-auto p-top-96">
+    <div class="slogan font-family-MS text-gradient">台灣的明天 喵先鋪路</div>
     <div class="flex align-items-center justify-content-evenly">
       <div class="identity flex align-items-center">
         <h3>2024 立委參選人</h3>
@@ -98,14 +98,39 @@
     </div>
   </header>
 
-  <div class="marqueeBox flex">
+  <div class="marqueeBox flex font-family-MS">
     <p class="marquee">為喵星人，護台灣！ 從喵的眼中，看見台灣 喵的未來，人的希望</p>
     <p class="marquee">為喵星人，護台灣！ 從喵的眼中，看見台灣 喵的未來，人的希望</p>
     <p class="marquee">為喵星人，護台灣！ 從喵的眼中，看見台灣 喵的未來，人的希望</p>
   </div>
 
-  <div class="advocate">
-    <h1>456</h1>
+  <div
+    class="advocate"
+    id="advocate"
+  >
+    <div class="advocate-content container-70 mx-auto flex justify-content-center">
+      <div class="advocate-text flex justify-content-center align-items-center">
+        <div class="advocate-title flex justify-content-center align-items-center">
+          <div>
+            <p class="identity">advocate</p>
+          </div>
+          <div>
+            <p class="title font-family-MS text-gradient">候選人主張</p>
+          </div>
+        </div>
+        <div class="advocate-description">
+          <h3>我堅信 ! 藉由推動更完善的<span class="c-orange">貓咪福利</span>和相關政策，更是間接地投資於<span class="c-orange">台灣的未來</span>。</h3>
+          <p>畢竟，民眾的身心健康與工作熱情是推動經濟的核心動力。透過完善的貓咪福利政策，為台灣的 GDP 經濟帶來巨大效益。
+            因此，我期望能在立法院內推進這些政策，確保每一隻貓咪都能得到他們應有的照顧，同時也為台灣的經濟發展助一臂之力。讓我們一同護航台灣的幸福經濟，從照顧每一隻貓咪開始。</p>
+        </div>
+      </div>
+      <div class="advocate-img flex">
+        <img
+          src="./image/image 8.png"
+          alt="advocate img"
+        >
+      </div>
+    </div>
   </div>
 
 
