--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 </head>
 
 <body>
-  <nav class="nav container-90 mx-auto flex align-items-center justify-content-between">
+  <nav class="nav container mx-auto flex align-items-center justify-content-between">
     <div class="logo flex">
       <img
-        src="./image/Property 1=Default@2x.png"
+        src="./image/Property 1=Default.svg"
         alt="Logo"
         width="52"
         height="43"
@@ -108,7 +108,7 @@
     class="advocate"
     id="advocate"
   >
-    <div class="advocate-content container-70 mx-auto flex justify-content-center">
+    <div class="advocate-content container-70 mx-auto flex justify-content-evenly">
       <div class="advocate-text flex justify-content-center align-items-center">
         <div class="advocate-title flex justify-content-center align-items-center">
           <div>
@@ -124,7 +124,7 @@
             因此，我期望能在立法院內推進這些政策，確保每一隻貓咪都能得到他們應有的照顧，同時也為台灣的經濟發展助一臂之力。讓我們一同護航台灣的幸福經濟，從照顧每一隻貓咪開始。</p>
         </div>
       </div>
-      <div class="advocate-img flex">
+      <div class="advocate-img flex justify-content-center">
         <img
           src="./image/image 8.png"
           alt="advocate img"
@@ -132,6 +132,49 @@
       </div>
     </div>
   </div>
+
+  <footer class="footer">
+    <div class="wrap container-70 mx-auto flex align-items-center">
+      <div class="footer-left">
+        <div class="no3-name flex align-items-center">
+          <div class="no3 text-align-center">
+            <h5>3</h5>
+          </div>
+          <h3 class="name">喵立翰 Miao Li-Han</h3>
+        </div>
+        <div class="external-link flex align-items-center">
+          <div class="flex justify-content-center align-items-center">
+            <a href="javascript:;"><img
+                src="./image/Property 1=fb.svg"
+                alt="fb icon"
+              ></a>
+          </div>
+          <div class="flex justify-content-center align-items-center">
+            <a href="javascript:;"><img
+                src="./image/Property 1=ig.svg"
+                alt="ig icon"
+              ></a>
+          </div>
+          <div class="flex justify-content-center align-items-center">
+            <a href="javascript:;"><img
+                src="./image/Property 1=youtue.svg"
+                alt="yt icon"
+              ></a>
+          </div>
+        </div>
+        <p class="copy-right"> &copy; 2023 喵立翰 Miao Li-Han 版權所有</p>
+      </div>
+      <div class="footer-right">
+        <h4>競選總部</h4>
+        <dev class="info">
+          <p class="address">辦公室地址：喵星區，毛茸茸大道88號，喵喵大樓3樓</p>
+          <p class="phone">電話：(02) 888-5678</p>
+          <p class="email">電子郵件地址：meowoffice@linmeow.tw</p>
+        </dev>
+      </div>
+    </div>
+
+  </footer>
 
 
   <script src="./script/all.js"></script>
