--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="interactiveBtns flex">
       <a href="#advocate">候選人主張</a>
-      <a href="javascript:;">最新活動</a>
+      <a href="#lastest-event">最新活動</a>
       <a href="javascript:;">政策議題</a>
       <a href="javascript:;">小額捐款</a>
       <a href="javascript:;">民眾服務信箱</a>
@@ -78,7 +78,7 @@
   <header class="container-s mx-auto p-top-96">
     <div class="slogan font-family-MS text-gradient">台灣的明天 喵先鋪路</div>
     <div class="flex align-items-center justify-content-evenly">
-      <div class="identity flex align-items-center">
+      <div class="block flex align-items-center">
         <h3>2024 立委參選人</h3>
       </div>
       <div class="no3-name flex align-items-center">
@@ -112,7 +112,7 @@
       <div class="advocate-text flex justify-content-center align-items-center">
         <div class="advocate-title flex justify-content-center align-items-center">
           <div>
-            <p class="identity">advocate</p>
+            <p class="block">advocate</p>
           </div>
           <div>
             <p class="title font-family-MS text-gradient">候選人主張</p>
@@ -129,6 +129,54 @@
           src="./image/image 8.png"
           alt="advocate img"
         >
+      </div>
+    </div>
+  </div>
+
+  <div
+    class="lastest-event container-70 mx-auto"
+    id="lastest-event"
+  >
+    <div class="event-title flex justify-content-center align-items-center">
+      <div class="block flex align-items-center">
+        <h6>LATEST EVENTS</h6>
+      </div>
+      <div class="font-family-MS text-gradient">
+        <p class="title">最新活動</p>
+      </div>
+    </div>
+    <div class="event-info flex justify-content-center align-items-center">
+      <div class="event-focus">
+        <img
+          src="./image/Frame 32.png"
+          alt="event focus picture"
+        >
+        <div class="event-description">
+          <small>2023/12/26</small>
+          <h5>參與台北寵物論壇，爭取貓咪友善環境</h5>
+          <p>炎炎夏日的周六，我走進了台北寵物論壇，帶著一副貓耳髮箍，決定要全力宣傳「貓咪至上」的理念！我相信，我們的都市中，每一隻貓咪都應該有自己的 VIP 休憩空間。</p>
+        </div>
+      </div>
+      <div class="event-list">
+        <div class="events">
+          <!-- <div class="event flex">
+            <img
+              src="./image/cover (1).png"
+              alt="event1 picture"
+            >
+            <div class="event-description">
+              <small>2023/12/24</small>
+              <h6>掃街模式開啟！帶著你的貓耳，來和我一起走！</h6>
+              <p>街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！</p>
+            </div>
+          </div> -->
+        </div>
+        <div class="see-more">
+          <button
+            type="button"
+            class="see-more-btn"
+          >查看更多&rarr;</button>
+        </div>
       </div>
     </div>
   </div>
