lastest-event update

--- a/index.html
+++ b/index.html
@@ -158,24 +158,12 @@
         </div>
       </div>
       <div class="event-list">
-        <div class="events">
-          <!-- <div class="event flex">
-            <img
-              src="./image/cover (1).png"
-              alt="event1 picture"
-            >
-            <div class="event-description">
-              <small>2023/12/24</small>
-              <h6>掃街模式開啟！帶著你的貓耳，來和我一起走！</h6>
-              <p>街上氣氛真的很棒，從小孩到大人，甚至有些狗狗朋友都帶著貓耳來找我握手，真的太可愛了！</p>
-            </div>
-          </div> -->
-        </div>
+        <div class="events"></div>
         <div class="see-more">
           <button
             type="button"
             class="see-more-btn"
-          >查看更多&rarr;</button>
+          >查看更多 &rarr;</button>
         </div>
       </div>
     </div>
