policy-issues update

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="interactiveBtns flex">
       <a href="#advocate">候選人主張</a>
       <a href="#lastest-event">最新活動</a>
-      <a href="javascript:;">政策議題</a>
+      <a href="#policy-issues">政策議題</a>
       <a href="javascript:;">小額捐款</a>
       <a href="javascript:;">民眾服務信箱</a>
     </div>
@@ -109,8 +109,8 @@
     id="advocate"
   >
     <div class="advocate-content container-70 mx-auto flex justify-content-evenly">
-      <div class="advocate-text flex justify-content-center align-items-center">
-        <div class="advocate-title flex justify-content-center align-items-center">
+      <div class="advocate-text flex flex-column justify-content-center align-items-center">
+        <div class="advocate-title flex flex-column justify-content-center align-items-center">
           <div>
             <p class="block">advocate</p>
           </div>
@@ -137,7 +137,7 @@
     class="lastest-event container-70 mx-auto"
     id="lastest-event"
   >
-    <div class="event-title flex justify-content-center align-items-center">
+    <div class="event-title flex flex-column justify-content-center align-items-center">
       <div class="block flex align-items-center">
         <h6>LATEST EVENTS</h6>
       </div>
@@ -146,11 +146,11 @@
       </div>
     </div>
     <div class="event-info flex justify-content-center align-items-center">
-      <div class="event-focus">
-        <img
+      <div class="event-focus mx-auto">
+        <!-- <img
           src="./image/Frame 32.png"
           alt="event focus picture"
-        >
+        > -->
         <div class="event-description">
           <small>2023/12/26</small>
           <h5>參與台北寵物論壇，爭取貓咪友善環境</h5>
@@ -164,6 +164,59 @@
             type="button"
             class="see-more-btn"
           >查看更多 &rarr;</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div
+    class="policy-issues container-70 mx-auto"
+    id="policy-issues"
+  >
+    <div class="issues-title flex flex-column justify-content-center align-items-center">
+      <div class="block flex align-items-center">
+        <h6>LATEST EVENTS</h6>
+      </div>
+      <div class="font-family-MS text-gradient">
+        <p class="title">政策議題</p>
+      </div>
+    </div>
+    <div class="issues-info flex justify-content-evenly align-items-center">
+      <div class="issue flex justify-content-center flex-column">
+        <h4>為毛孩子謀福利！
+          推動寵物醫療保障方案</h4>
+        <div class="img-radius flex justify-content-center align-items-center">
+          <img
+            src="./image/image 4.png"
+            alt="pet insure picture"
+            width="398"
+            height="313"
+          >
+        </div>
+      </div>
+      <div class="issue flex justify-content-center flex-column">
+        <h4>打造休閒天堂！
+          推廣寵物休閒與娛樂場所</h4>
+        <div class="img-radius flex justify-content-center align-items-center">
+          <img
+            src="./image/image 6.png"
+            alt="pet rest place picture"
+            width="398"
+            height="313"
+          >
+        </div>
+      </div>
+      <div class="issue flex justify-content-center flex-column">
+        <h4>推廣寵物飼養教育
+          讓愛更加專業</h4>
+        <div class="img-radius flex justify-content-center align-items-center">
+          <img
+            src="./image/image 9.png"
+            alt="owner education picture"
+            width="398"
+            height="313"
+          >
         </div>
       </div>
     </div>
